tests/errors/header/double_define_error2 2.s
.name "Zork"
.comment "Comment zork"
.name "Krozalkdffaklsdjfljsadflkjldfjlkjjlasjflasdlkjfkajslfkjsdafklasjdflkasdlkfjksaldjfkljasldkfjaslfdjlaffakljdflkjasdfjalkfjlkasdflkjalkdjsfljalfkasdjfl

live %1
